--- a/templates/main/layout.html
+++ b/templates/main/layout.html
@@ -10,19 +10,21 @@
     <title> {% block title  %}{% endblock %}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
+{% block social_media %}{% endblock %}
+{% block service_type %}{% endblock %}
 </head>
 <body >
     <header>
           <nav>
               <ul>
                   <li><a href="{% url 'home' %}">Home</a></li>
-                  <li><a href="{% url 'about' %}">About</a></li>
-                  <li><a href="{% url 'form_create' %}">Form</a></li>
+                  <li><a href="#feedback">Form</a></li>
                    <li><a href="{% url 'form_view' %}">Form View</a></li>
               </ul>
           </nav>
       </header>
     {% block content  %}
     {% endblock %}
+{% block form_validation %}{% endblock %}
 </body>
 </html>
